wsdl config optional

--- a/soap-node.html
+++ b/soap-node.html
@@ -8,7 +8,7 @@
         defaults: {
             name: { value: "" },
             topic: { value: "" },
-            wsdl: {value: "", type: "soap-config"},
+            wsdl: {value: "", type: "soap-config", required: false},
             method: {value: "", required: true}
         },
         label: function () {
